@@ -11,6 +11,32 @@
 #include "myctype.h"
 #include "entity.h"
 
+#ifndef HAVE_BCOPY
+void
+bcopy(void *src, void *dest, int len)
+{
+    int i;
+    if (src == dest)
+	return;
+    if (src < dest) {
+	for (i = len - 1; i >= 0; i--)
+	    dest[i] = src[i];
+    }
+    else {			/* src > dest */
+	for (i = 0; i < len; i++)
+	    dest[i] = src[i];
+    }
+}
+
+void
+bzero(void *ptr, int len)
+{
+    int i;
+    for (i = 0; i < len; i++)
+	*(ptr++) = 0;
+}
+#endif				/* not HAVE_BCOPY */
+
 char *
 allocStr(const char *s, int len)
 {
